# bico

./: .gitignore  CHANGELOG.md  CHANGELOG.txt  README.md  environment.yml  pyproject.toml  setup.py
_test_out/_BICO_TEST_CHA_BICO-20210805-114636/: Bico.settings
_test_out/_BICO_TEST_CHA_BICO-20210805-114636/raw_data_ascii/: CH-OE2_202108041300.csv
_test_out/_BICO_TEST_CHA_BICO-20210805-122053/: Bico.settings
_test_out/_BICO_TEST_CHA_BICO-20210805-122127/: Bico.settings
_tests/: CH-Dav_EC_202006011330_L01_F05.xlsx
_versions/bico-v0.3.0/: setup.py
bico/: bico.py  del.csv  start_bico.py
bico/gui/: gui.css  gui.py  gui_elements.py
bico/help/: tooltips.py
bico/ops/: bin.py  file.py  format_data.py  setup.py  vis.py
bico/settings/: Bico - Kopie.settings  Bico - Kopie.settingsOld  Bico.settings  Bico.settingsOld  _version.py
bico/settings/data_blocks/: HS100-A.dblock  HS100-A.md  HS50-A.dblock  HS50-A.md  HS50-B.dblock  HS50-B.md  IRGA72-A.dblock  IRGA72-A.md  IRGA72-B-GN1.md  IRGA72-B.dblock  IRGA72-B.md  IRGA75-A-GN1.dblock  IRGA75-A-GN1.md  IRGA75-A.dblock  IRGA75-A.md  LGR-A.dblock  LGR-A.md  QCL-A.dblock  QCL-A.md  QCL-A2.dblock  QCL-A2.md  QCL-A3.dblock  QCL-A3.md  QCL-A4.dblock  QCL-A4.md  QCL-C.dblock  QCL-C.md  R2-A.dblock  (+4 more)
src/: __init__.py  bico.py
src/gui/: gui.css  gui.py
src/ops/: bin.py  bin_conversion_exceptions.py  cli.py  file.py  setup.py  stats.py  vis.py
src/settings/: BICO-CONFLICT-4.settingsOld  BICO-CONFLICT-5.settingsOld  BICO.settings  BICO.settings.BAK  BICO.settingsBak  BICO.settingsOld  Bico.settings  Bico.settingsOld  _version.py
(+74 files in other folders)
