[tool.poetry]
name = "bico"
version = "1.1.0"
description = ""
authors = ["holukas <lukas.hoertnagl@usys.ethz.ch>"]

[tool.poetry.dependencies]
python = "^3.9"
single-source = "^0.2.0"
pandas = "^1.3.4"
matplotlib = "^3.4.3"
PyQt5 = "^5.15.6"
argparse = "^1.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
