[tool.poetry]
name = "bico"
version = "v1.6.1"
description = "Binary Converter to convert binary files to ASCII"
authors = ["holukas <holukas@ethz.ch>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pandas = "1.3.4"
numpy = "1.21.2"
pytz = "2021.3"
PyQt5 = "^5.15.9"
matplotlib = "3.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
